Fix to speed up processing of thresholds (thanks mikv!)
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@29 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -41,6 +41,9 @@
 
 ----[ Changelog
 
+	--- 0.3.3 ---
+		Fix to speed up processing of thresholds
+
 	--- 0.3.2 ---
 		Fix an index error message displayed when clicking the auto-creation link
 		Fix an issue with thresholds not switching into "is still down" mode when alerting
