Fix an issue with re-alert set to 0 still alerting
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@34 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -44,6 +44,7 @@
 	--- 0.3.3 ---
 		#0000076 - Fix to speed up processing of thresholds (thanks mikv!)
 		#0000079 - Bug causing thold to not respect the others plugins device page actions
+		Fix an issue with re-alert set to 0 still alerting
 
 	--- 0.3.2 ---
 		Fix an index error message displayed when clicking the auto-creation link
