--- a/README
+++ b/README
@@ -4,7 +4,7 @@
     Contact ........ jimmy@sqmail.org
     Home Site ...... http://cactiusers.org
     Program ........ Thold for Cacti
-    Version ........ 0.3.2
+    Version ........ 0.3.3
     Purpose ........ Threshold Alert module
 
 *******************************************************************************/
@@ -45,6 +45,7 @@
 		#0000076 - Fix to speed up processing of thresholds (thanks mikv!)
 		#0000079 - Bug causing thold to not respect the others plugins device page actions
 		Fix an issue with re-alert set to 0 still alerting
+		Fix the host down messages, this will work with cactid also
 
 	--- 0.3.2 ---
 		Fix an index error message displayed when clicking the auto-creation link
