Host Down messages are now sent as text only emails Also do a little formating cleanup
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@36 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -41,6 +41,9 @@
 
 ----[ Changelog
 
+	--- 0.3.4 ---
+		Host Down messages are now sent as text only emails
+
 	--- 0.3.3 ---
 		#0000076 - Fix to speed up processing of thresholds (thanks mikv!)
 		#0000079 - Bug causing thold to not respect the others plugins device page actions
