--- a/README
+++ b/README
@@ -42,10 +42,12 @@
 ----[ Changelog
 
 	--- 0.3.4 ---
-		Allow text only threshold alerts (no graph!)
+		Allow text only threshold alerts (aka no graph!)
 		Add some text to the alerts, including the hostname
 		Change the email to be sent as "Cacti" instead of PHPMailer
-		Fix issue with host alerts still being sent multipart
+		Fix issue with host alerts still being sent as multipart messages
+		Add the ability to completely customize the threshold alert (allow descriptors)
+		Re-arrange the Settings page to group like options
 
 	--- 0.3.3 ---
 		#0000076 - Fix to speed up processing of thresholds (thanks mikv!)
