Fix an issue when applying thresholds to a device with no datasources / dataqueries
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@50 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -48,6 +48,7 @@
 		Fix issue with host alerts still being sent as multipart messages
 		Add the ability to completely customize the threshold alert (allow descriptors)
 		Re-arrange the Settings page to group like options
+		Fix an issue when applying thresholds to a device with no datasources / dataqueries
 
 	--- 0.3.3 ---
 		#0000076 - Fix to speed up processing of thresholds (thanks mikv!)
