Update thold to use the Settings plugin for Email functionality Add a dependency check and warning Remove duplicate files (now in Settings)
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@56 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -41,6 +41,10 @@
 
 ----[ Changelog
 
+	--- 0.3.5 ---
+		Update plugin to use the Settings plugin for mail functionality
+
+
 	--- 0.3.4 ---
 		Allow text only threshold alerts (aka no graph!)
 		Add some text to the alerts, including the hostname
