Update Copyrights for my plugins to show as property of The Cacti Group with the standard header. --- Note: I did not add the copyright to files which may possibly contain code by others (the original plugin authors like with the syslog plugin).  I will work out the details with them, and update the copyright if they turn it over to us, or I will re-write it all from scratch.
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@76 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -43,8 +43,8 @@
 
 	--- 0.3.5 ---
 		Update plugin to use the Settings plugin for mail functionality
+		Fix for thold values being off when using different polling intervals
 		Use new "api_user_realm_auth" from Plugin Architecture
-
 
 	--- 0.3.4 ---
 		Allow text only threshold alerts (aka no graph!)
