--- a/README
+++ b/README
@@ -45,6 +45,7 @@
 		Update plugin to use the Settings plugin for mail functionality
 		Fix for thold values being off when using different polling intervals
 		Use new "api_user_realm_auth" from Plugin Architecture
+		Fix for creating multiple thresholds via templates from the same DataSource
 
 	--- 0.3.4 ---
 		Allow text only threshold alerts (aka no graph!)
