--- a/README
+++ b/README
@@ -46,6 +46,7 @@
 		Fix for thold values being off when using different polling intervals
 		Use new "api_user_realm_auth" from Plugin Architecture
 		Fix for creating multiple thresholds via templates from the same DataSource
+		Fix for threshold template data propagating to the an incorrect threshold
 
 	--- 0.3.4 ---
 		Allow text only threshold alerts (aka no graph!)
