Change thold to use the Settings plugin for mail functionality
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@99 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -47,9 +47,9 @@
 		Use new "api_user_realm_auth" from Plugin Architecture
 		Fix for creating multiple thresholds via templates from the same DataSource
 		Fix for threshold template data propagating to an incorrect threshold
-		Removed Default Notify address, as its unnecessary when using templates
 		Added Email Address field to User's Profiles
 		Added ability to select a user to alert for a threshold instead of having to type in their email address
+		Change to using the Settings plugin for mail functionality
 
 	--- 0.3.4 ---
 		Allow text only threshold alerts (aka no graph!)
