- Completely redesign the thold interface to remove all old code and update the copyrights to Cacti - Interface now sports a "console" to switch between viewing all, failed, recovering, or normal thresholds. - Move from 4 SQL queries per threshold to just 2 SQL queries per page load - Reporting Views for previous alerts are now being worked on
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@104 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -52,6 +52,7 @@
 		Change to using the Settings plugin for mail functionality
 		Log all thresholds to a SQL Database
 		Allow on the fly toggling of Threshold breaching as lines on the graphs
+		Redesign the Thold Viewing Interface to have Multiple Views
 
 	--- 0.3.4 ---
 		Allow text only threshold alerts (aka no graph!)
