--- a/README
+++ b/README
@@ -4,7 +4,7 @@
     Contact ........ jimmy@sqmail.org
     Home Site ...... http://cactiusers.org
     Program ........ Thold for Cacti
-    Version ........ 0.3.8
+    Version ........ 0.3.9
     Purpose ........ Threshold Alert module
 
 *******************************************************************************/
@@ -44,6 +44,8 @@
 
 ----[ Changelog
 
+	--- 0.3.9 ---
+		Major polller speed increase when using large numbers of thresholds
 
 	--- 0.3.8 ---
 		Fix undefined variable error on thold.php
