--- a/README
+++ b/README
@@ -43,8 +43,11 @@
 
 ----[ Changelog
 
+	--- 0.4.0 ---
+		Add filtering to listthold.php (thanks Howie!)
+
 	--- 0.3.9 ---
-		Major polller speed increase when using large numbers of thresholds
+		Major poller speed increase when using large numbers of thresholds
 
 	--- 0.3.8 ---
 		Fix undefined variable error on thold.php
