--- a/README
+++ b/README
@@ -45,6 +45,8 @@
 
 	--- 0.4.0 ---
 		Add filtering to listthold.php (thanks Howie!)
+		Fix for multiple poller intervals, use RRD Step of Data Source instead of Polling Interval
+		Use time periods instead of number of pollings when specifying Repeat Alerts and Fail Triggers
 
 	--- 0.3.9 ---
 		Major poller speed increase when using large numbers of thresholds
