Add syslog message for down and recovering hosts Fix for thresholds with CDEF values
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@242 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -47,6 +47,8 @@
 		Add filtering to listthold.php (thanks Howie!)
 		Fix for multiple poller intervals, use RRD Step of Data Source instead of Polling Interval
 		Use time periods instead of number of pollings when specifying Repeat Alerts and Fail Triggers
+		Add syslog message for down and recovering hosts
+		Fix for thresholds with CDEF values
 
 	--- 0.3.9 ---
 		Major poller speed increase when using large numbers of thresholds
