Bug:     Fix for down host alerting on disabled hosts
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@338 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -31,9 +31,9 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
-
 	--- 0.4.0 ---
 		Bug:     Fix for multiple poller intervals, use RRD Step of Data Source instead of Polling Interval
+		Bug:     Fix for down host alerting on disabled hosts
 		Feature: Add filtering to listthold.php
 		Feature: Use time periods instead of number of pollings when specifying Repeat Alerts and Fail Triggers
 		Feature: Time Based Threshold Checking
