Feature: Add thold statistics to settings table to allow graphing the results
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@384 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -31,6 +31,10 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
+	--- 0.4.1 --
+		Feature: Add thold statistics to settings table to allow graphing the results
+
+		
 	--- 0.4.0 ---
 		Bug:     Fix for multiple poller intervals, use RRD Step of Data Source instead of Polling Interval
 		Bug:     Fix for down host alerting on disabled hosts
