Bug:	 Speed up Datasource Query on Told Tab
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@386 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -33,8 +33,9 @@
 ----[ Changelog
 	--- 0.4.1 --
 		Feature: Add thold statistics to settings table to allow graphing the results
+		Bug:	 Return False from host status check function if it is disabled
+		Bug:	 Speed up Datasource Query on Told Tab
 
-		
 	--- 0.4.0 ---
 		Bug:     Fix for multiple poller intervals, use RRD Step of Data Source instead of Polling Interval
 		Bug:     Fix for down host alerting on disabled hosts
