--- a/README
+++ b/README
@@ -36,6 +36,7 @@
 		Bug:	 Return False from host status check function if it is disabled
 		Bug:	 Speed up Datasource Query on Told Tab
 		Bug:	 Fix CDEF usage
+		Bug:	 Fix Thold Add Wizard Bug with IE6/7
 
 	--- 0.4.0 ---
 		Bug:     Fix for multiple poller intervals, use RRD Step of Data Source instead of Polling Interval
