Bug:	 Fix HTTP_REFERER error
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@402 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -37,6 +37,7 @@
 		Bug:	 Speed up Datasource Query on Told Tab
 		Bug:	 Fix CDEF usage
 		Bug:	 Fix Thold Add Wizard Bug with IE6/7
+		Bug:	 Fix HTTP_REFERER error
 
 	--- 0.4.0 ---
 		Bug:     Fix for multiple poller intervals, use RRD Step of Data Source instead of Polling Interval
