Bug:	 Fix duplicate function names (when improperly installing plugin)
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@403 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -38,6 +38,7 @@
 		Bug:	 Fix CDEF usage
 		Bug:	 Fix Thold Add Wizard Bug with IE6/7
 		Bug:	 Fix HTTP_REFERER error
+		Bug:	 Fix duplicate function names (when improperly installing plugin)
 
 	--- 0.4.0 ---
 		Bug:     Fix for multiple poller intervals, use RRD Step of Data Source instead of Polling Interval
