Bug:	Fix for compatibility with other plugins using datasource action hook
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@487 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -31,7 +31,10 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
-	--- 0.4.1 --
+	--- 0.4.2 ---
+		Bug:	Fix for compatibility with other plugins using datasource action hook
+	
+	--- 0.4.1 ---
 		Feature: Add thold statistics to settings table to allow graphing the results
 		Bug:	 Return False from host status check function if it is disabled
 		Bug:	 Speed up Datasource Query on Told Tab
