Bug:	Fixed a few minor issues
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@489 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -33,6 +33,7 @@
 ----[ Changelog
 	--- 0.4.2 ---
 		Bug:	Fix for compatibility with other plugins using datasource action hook
+		Bug:	Fixed a few minor issues
 	
 	--- 0.4.1 ---
 		Feature: Add thold statistics to settings table to allow graphing the results
