Bug: Re-add syslog messages for down hosts
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@493 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -33,6 +33,7 @@
 ----[ Changelog
 	--- 0.4.2 ---
 		Bug:	Fix for compatibility with other plugins using datasource action hook
+		Bug: Re-add syslog messages for down hosts
 		Bug:	Fixed a few minor issues
 	
 	--- 0.4.1 ---
