Bug: Allow the use of query_XYZ in CDEFs
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@494 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -35,6 +35,7 @@
 		Bug:	Fix for compatibility with other plugins using datasource action hook
 		Bug: Re-add syslog messages for down hosts
 		Bug:	Fixed a few minor issues
+		Bug: Allow the use of query_XYZ in CDEFs
 	
 	--- 0.4.1 ---
 		Feature: Add thold statistics to settings table to allow graphing the results
