Bug: Fix host status page to only allow users to see hosts they have access to
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@495 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -36,6 +36,7 @@
 		Bug: Re-add syslog messages for down hosts
 		Bug:	Fixed a few minor issues
 		Bug: Allow the use of query_XYZ in CDEFs
+		Bug: Fix host status page to only allow users to see hosts they have access to
 	
 	--- 0.4.1 ---
 		Feature: Add thold statistics to settings table to allow graphing the results
