Bug: Fix ru_nswap errors on Windows
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@496 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -37,6 +37,7 @@
 		Bug:	Fixed a few minor issues
 		Bug: Allow the use of query_XYZ in CDEFs
 		Bug: Fix host status page to only allow users to see hosts they have access to
+		Bug: Fix ru_nswap errors on Windows
 	
 	--- 0.4.1 ---
 		Feature: Add thold statistics to settings table to allow graphing the results
