QA: ChangeLog update Feature: Sort current values numerically on THold tab
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@573 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -41,6 +41,7 @@
     Feature: Add support for Alert Escalation (Multiple Alerts per Threshold)
     Feature: Add support for Alerts via Script Execution
     Feature: Add support for Alerts via SNMP Writes
+    Feature: Sort current values numerically on THold tab
 	
 	--- 0.4.1 ---
     Feature: Add thold statistics to settings table to allow graphing the results
