Bug#0001753: Lotus Notes are unable to render inline png pictures
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@1185 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -30,6 +30,7 @@
 ----[ Changelog
 
 	--- 0.5 ---
+    Bug#0001753: Lotus Notes are unable to render inline png pictures 
     Bug#0001810: Thold: RRDTool 1.4.x error while determining last RRD value 
     Bug: Fix for compatibility with other plugins using datasource action hook
     Bug: Re-add syslog messages for down hosts
