Bug#0001753: Lotus Notes are unable to render inline png pictures
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1185 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -32,6 +32,7 @@
 
 ----[ Changelog
   --- SVN ---
+    Bug#0001753: Lotus Notes are unable to render inline png pictures 
     Bug#0001810: Thold: RRDTool 1.4.x error while determining last RRD value 
 
 	--- 0.4.1 ---
