Add support for the maintenance scheduling plugin
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1257 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -31,7 +31,11 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
-  --- SVN ---
+	--- SVN ---
+		Add support for maint plugin
+
+  --- 0.4.2 ---
+		Fixed Cacti 0.8.7g compatibility
     Bug#0001753: Lotus Notes are unable to render inline png pictures 
     Bug#0001810: Thold: RRDTool 1.4.x error while determining last RRD value 
 
