Fix for negative values in baselining
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1326 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -36,6 +36,7 @@
 		Fix to allow Add Wizard to show all datasources belonging to a graph (even when in separate data templates)
 		Re-apply SQL speed up when polling
 		Several fixes to Baselining
+		Fix for negative values in baselining
 
   --- 0.4.2 ---
 		Fixed Cacti 0.8.7g compatibility
