Update README Update Copyright year
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1566 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -31,6 +31,12 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
+	--- 0.4.4 ---
+		Fix emailing of alerts when PHP-GD is not available
+		Add Debug logging
+		Sort Threshold drop down list by Description
+		Add missing column to upgrade script
+
 	--- 0.4.3 ---
 		Add support for maint plugin
 		Fix to allow Add Wizard to show all datasources belonging to a graph (even when in separate data templates)
