Multi fixes from our hard working forum users (special thanks to sodium) Most of this impacts baselines, still need to create an upgrade path for old baselines to new baselines
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1583 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -36,6 +36,7 @@
 		Add Debug logging
 		Sort Threshold drop down list by Description
 		Add missing column to upgrade script
+		Multiple fixes posted by our hard working forum users!!!
 
 	--- 0.4.3 ---
 		Add support for maint plugin
