--- a/README
+++ b/README
@@ -36,6 +36,7 @@
 		Add Debug logging
 		Sort Threshold drop down list by Description
 		Add missing column to upgrade script
+		Update baseline description
 		Multiple fixes posted by our hard working forum users!!!
 
 	--- 0.4.3 ---
