Convert to General Header to save real-estate 30 second refresh Fix Baseline Alarm Reporting UI so that it's readable Fix Clear Button Behavior on THold Tab
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1662 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -32,6 +32,8 @@
 
 ----[ Changelog
 	--- 0.4.4 ---
+		Convert to General Header to save real-estate
+		Fix Baseline Alarm Reporting UI so that it's readable
 		Fix emailing of alerts when PHP-GD is not available
 		Add Debug logging
 		Sort Threshold drop down list by Description
