Add Warning Level for Hi/Low Alarms (Care of Thomas Urban) QA Baseline Alarms and Rework Interface to Show More Clearly Add Log Tab and New Legend for Log Events Add Additional Logging to Show Warning/Alert/Restoral Notify Events General QA of Logic and Display W3C Compliance
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1683 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -31,6 +31,9 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
+	--- 0.4.6 ---
+		Add Warning Support Curtesy (Thomas Urban)
+
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
 		Add Debug logging
@@ -44,6 +47,7 @@
 		Fix to allow Add Wizard to show all datasources belonging to a graph (even when in separate data templates)
 		Re-apply SQL speed up when polling
 		Several fixes to Baselining
+		Several fixes to CDEFs
 		Add customizable subjects and message body for down host alerts
 
 	--- 0.4.2 ---
