Update README Make sure numbers are display well.
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1685 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -33,6 +33,8 @@
 ----[ Changelog
 	--- 0.4.6 ---
 		Add Warning Support Curtesy (Thomas Urban)
+		Improve display of Baseline Alarms
+		Add Log Tab and new Events for Readablilty
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
