Allow a THold Template to Apply Naming Rules to THolds More QA involving a deprecated field name for baselines
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1686 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -35,6 +35,7 @@
 		Add Warning Support Curtesy (Thomas Urban)
 		Improve display of Baseline Alarms
 		Add Log Tab and new Events for Readablilty
+		Allow a THold Template to Apply Naming Rules to THolds
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
