Minor cleanup of changelog
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1688 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -35,7 +35,10 @@
 		Add Warning Support Curtesy (Thomas Urban)
 		Improve display of Baseline Alarms
 		Add Log Tab and new Events for Readablilty
-		Allow a THold Template to Apply Naming Rules to THolds
+		Allow a variable replacements in Threshold names
+		Fix several GUI and polling issues
+		Don't alarm on blank data output
+		Remove old ununsed variables
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
