Fix a few visual issues on thold templates.
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1695 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -39,6 +39,7 @@
 		Fix several GUI and polling issues
 		Don't alarm on blank data output
 		Remove old ununsed variables
+		Fix thold messages on restorals
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
