Don't show percent signs when baseline values are blank Add Reapply Suggested Names for Tholds from their template
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1699 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -40,6 +40,7 @@
 		Don't alarm on blank data output
 		Remove old ununsed variables
 		Fix thold messages on restorals
+		Reapply Suggested Name for Tholds
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
