Add E-Mail Priority per 'dragossto' Add Per Host E-Mail overrides per 'dragossto'
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1738 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -41,6 +41,8 @@
 		Remove old ununsed variables
 		Fix thold messages on restorals
 		Reapply Suggested Name for Tholds
+		Add E-Mail Priority per 'dragossto'
+		Add Per Host E-Mail overrides per 'dragossto'
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
