Several W3C Validation Fixes Add Ability to Disable Legacy Alerting Add Ability to Apply Notification Lists to Templates and Tholds SQL Code Readability Fixes Reorder Warning in Front of Alerts
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/branches/stable@1756 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -41,8 +41,9 @@
 		Remove old ununsed variables
 		Fix thold messages on restorals
 		Reapply Suggested Name for Tholds
-		Add E-Mail Priority per 'dragossto'
-		Add E-Mail Notification Lists for Hosts
+		Add Email Priority per 'dragossto'
+		Add Email Notification Lists for Thresholds, Templates and Dead Hosts
+		Add Ability to Disable Legacy Alerting
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
