--- a/README
+++ b/README
@@ -44,6 +44,9 @@
 		Add Email Priority per 'dragossto'
 		Add Email Notification Lists for Thresholds, Templates and Dead Hosts
 		Add Ability to Disable Legacy Alerting
+		Add Ability to use |ds:dsname| and |query_ifSpeed| in RPN Expression
+		Add RPN Expressions 'AND' and 'OR'
+		Add Support for Boost to Baseline Tholds
 
 	--- 0.4.4 ---
 		Fix emailing of alerts when PHP-GD is not available
